--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </div>
         
-        <p class="w-full h-19 bg-slate-600 text-center text-xl p-3 text-white">&copyAll right are reserved by Gadget Galaxy</p>
+        <p class="w-full h-19 bg-slate-600 text-center text-xl p-3 text-white">&copyAll rights are reserved by Gadget Galaxy</p>
     </footer>
     <script src="./script.js"></script>
     
